public interface IPuzzlePausable
{
    // Lógica que pausa el puzzle
    public void PuzzlePauseMe();

    // Lógica que reanuda el puzzle
    public void PuzzleResumeMe();
}
